<resources>
    <string name="app_name">Now Fitness</string>
    <string name="item_title_user_profile">User Profile</string>

    <string name="text_view_first_name">First Name</string>
    <string name="text_view_last_name">Last Name</string>
    <string name="button_save">Save</string>
    <string name="button_text_done">Done</string>
    <string name="action_user_profile">User Profile</string>

    <string name="fragment_rssfeed">RSS FEED</string>
    <string name="fragment_generate">My Workout</string>
    <string name="fragment_wod">NOW</string>

    <string name="myworkout_counter">1/4</string>
    <string name="button_now">Name Your Workout</string>
    <string name="button_generate">Generate Workout</string>
    <string name="text_view_input_name">Input name to generate workout:</string>
    <string name="button_genNow">N.O.W</string>

    <string name="text_view_gender">Gender</string>
    <string name="text_view_height">Height(cm)</string>
    <string name="text_view_weight">Weight(lbs)</string>

    <string name="radioBtn_Male">Male</string>
    <string name="radioBtn_Female">Female</string>
    <string name="radioBtn_Other">Other</string>
    <string name="prompt_success_update">Profile update is successful</string>
    <string name="prompt_success_insert">Profile insert is successful</string>
    <string name="prompt_error">Error: Unable to Connect to the database</string>
    <string name="prompt_req_fname">First name is required!</string>
    <string name="prompt_req_lname">Last name is required!</string>
    <string name="display_message1">NAME your Workout Challenge for : </string>
    <string name="display_message2">Repeat 3x! Go for it!</string>
    <string name="prompt_done">Workout Success!!</string>
    <string name="text_view_reps">Repetition:  </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
