<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding"
    tools:context="com.now.fitness.nowfitnessui.Activity.UserProfileActivity">

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxWidth="@dimen/logo_width"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/logo_margin"
        android:layout_marginBottom="@dimen/logo_margin"
        android:contentDescription="@string/app_name"
        android:src="@drawable/now_logo_blue"/>

    <TextView
        android:id="@+id/textView_FirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_first_name"
        android:layout_below="@id/imageView_logo"/>

    <EditText
        android:id="@+id/editText_FirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/textView_FirstName"/>

    <TextView
        android:id="@+id/textView_LastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_last_name"
        android:layout_below="@id/editText_FirstName"/>

    <EditText
        android:id="@+id/editText_LastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_below="@id/textView_LastName"/>

    <Button
        android:id="@+id/button_Done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text_done"
        android:layout_below="@id/editText_LastName"
        android:onClick="onClick_UserProfileDone"/>

</RelativeLayout>
